[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/PopupDialog.gd" type="Script" id=1]
[ext_resource path="res://textures/Star Blank.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="."]
visible = true
margin_left = 800.0
margin_top = 261.0
margin_right = 1120.0
margin_bottom = 381.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="PopupDialog"]
margin_left = 204.0
margin_top = 88.0
margin_right = 256.0
margin_bottom = 108.0
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="PopupDialog"]
margin_left = 44.0
margin_top = 88.0
margin_right = 96.0
margin_bottom = 108.0
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextTime" type="Label" parent="PopupDialog"]
margin_left = 44.0
margin_top = 24.0
margin_right = 84.0
margin_bottom = 38.0
text = "Time: "

[node name="Time" type="Label" parent="PopupDialog"]
margin_left = 92.0
margin_top = 24.0
margin_right = 132.0
margin_bottom = 38.0

[node name="TextMoves" type="Label" parent="PopupDialog"]
margin_left = 44.0
margin_top = 48.0
margin_right = 94.0
margin_bottom = 62.0
text = "Moves: "

[node name="Moves" type="Label" parent="PopupDialog"]
margin_left = 96.0
margin_top = 48.0
margin_right = 146.0
margin_bottom = 62.0
text = " "

[node name="Star1" type="Sprite" parent="PopupDialog"]
position = Vector2( 184, 38 )
scale = Vector2( 0.766667, 0.775862 )
texture = ExtResource( 2 )

[node name="Star2" type="Sprite" parent="PopupDialog"]
position = Vector2( 236, 38 )
scale = Vector2( 0.766667, 0.775862 )
texture = ExtResource( 2 )

[node name="Star3" type="Sprite" parent="PopupDialog"]
position = Vector2( 284, 38 )
scale = Vector2( 0.766667, 0.775862 )
texture = ExtResource( 2 )
[connection signal="pressed" from="PopupDialog/Next" to="PopupDialog" method="_on_Next_pressed"]
[connection signal="pressed" from="PopupDialog/Retry" to="PopupDialog" method="_on_Retry_pressed"]
